Prevents hidden buttons from being clicked on mobile

--- a/wee-slider.css
+++ b/wee-slider.css
@@ -67,6 +67,16 @@ wee-slider .wee-slider__buttons button {
   translate: 0 -50%;
 }
 
+wee-slider[data-buttons-on-hover="true"] .wee-slider__buttons button {
+  pointer-events: none;
+}
+
+@media (hover: hover) {
+  wee-slider[data-buttons-on-hover="true"]:hover .wee-slider__buttons button {
+    pointer-events: all;
+  }
+}
+
 wee-slider .wee-slider__buttons button:not([disabled]) {
   cursor: pointer;
 }
